iac/argo-cd/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smiles-api-service
spec:
  selector:
    app: smiles-api
  ports:
  - port: 8080
    targetPort: 8080
