iac/argo-cd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smiles-web
spec:
  ingressClassName: kong
  rules:
  - host: smiles.outsmartdigital.com.br
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: smiles-web-service
            port:
              number: 3000
